slider adaptive fix align and dots

--- a/src/compopnents/slider/styles.scss
+++ b/src/compopnents/slider/styles.scss
@@ -41,7 +41,7 @@
     }
 
     @media (max-width: 770px) {
-      &>div {
+      & > div {
         margin: 0 auto;
       }
 
@@ -80,10 +80,18 @@
     top: 150px;
     //margin: 0 auto;
     width: 100%;
-    //display: inline-block;
-    span{
-      //text-align: center;
+
+    @media (max-width: 1450px) {
+      top: 80px;
     }
+    @media (max-width: 1300px) {
+      font-size: 24px;
+      top: 80px;
+    }
+    @media (max-width: 1100px) {
+      top: 30px;
+    }
+
     @media (max-width: 770px) {
       position: static;
       text-align: center;
@@ -96,9 +104,24 @@
   &__1-button {
     position: absolute;
     top: 250px;
-    left:50%;
+    left: 50%;
     margin-left: -80px;
 
+    @media (max-width: 1450px) {
+      top: 150px;
+    }
+    @media (max-width: 1300px) {
+      top: 150px;
+    }
+    @media (max-width: 1100px) {
+      top: 100px;
+    }
+    @media (max-width: 770px) {
+      position: static;
+      margin: 0;
+      text-align: center;
+      order: 3;
+    }
   }
 
   // .slide__1-img
